fix:(Modules 2 exercise) Updated the exercise as in original https://github.com/rust-lang/rustlings/commit/1c3beb0a59178c950dc05fe8ee2346b017429ae0

--- a/Modules and Macros/Modules/Public Modifier 2/task-info.yaml
+++ b/Modules and Macros/Modules/Public Modifier 2/task-info.yaml
@@ -9,9 +9,15 @@ files:
     length: 3
     placeholder_text: /*insert a modifier here to make the module accessible from
       outside*/
+  - offset: 57
+    length: 5
+    placeholder_text: ???
   - offset: 68
     length: 3
     placeholder_text: /*insert a modifier here to make the module accessible from
       outside*/
+  - offset: 103
+    length: 6
+    placeholder_text: ???
 - name: tests/tests.rs
   visible: false
