fix:(Reference Order = Move Semantics 5) Updated the exercise as in original https://github.com/rust-lang/rustlings/commit/d75759e829fdcd64ef071cf4b6eae2a011a7718b

--- a/Understanding Ownership/Move Semantics/Reference Order/task-info.yaml
+++ b/Understanding Ownership/Move Semantics/Reference Order/task-info.yaml
@@ -4,11 +4,11 @@ files:
   visible: true
   placeholders:
   - offset: 16
-    length: 88
+    length: 87
     placeholder_text: |-
       let mut x = 100;
           let y = &mut x;
-          let z = &mut *y;
+          let z = &mut x;
           *y += 100;
           *z += 1000;
 - name: Cargo.toml
