--- a/Recoverable and Unrecoverable Errors/Error Handling/Advanced Errors 2/task-info.yaml
+++ b/Recoverable and Unrecoverable Errors/Error Handling/Advanced Errors 2/task-info.yaml
@@ -10,14 +10,24 @@ files:
   - offset: 822
     length: 35
     placeholder_text: |-
-      // TODO: Implement a missing trait so that `main()` below will compile. It
+      // TODO: Implement a missing trait so that `main()` will compile. It
       // is not necessary to implement any methods inside the missing trait.
   - offset: 1354
     length: 173
     placeholder_text: /* TODO */
-  - offset: 2169
-    length: 7
-    placeholder_text: /* TODO */
+  - offset: 2122
+    length: 19
+    placeholder_text: /* Add a condition */
+  - offset: 2189
+    length: 79
+    placeholder_text: /* Return an error if the city name is empty */
+  - offset: 2281
+    length: 63
+    placeholder_text: /* Return an error if the string is empty or has the wrong number
+      of fields */
+  - offset: 2392
+    length: 5
+    placeholder_text: Badlen
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
