Add lesson on ownership (closely follows section 4.1 of the book)
- Borrows texts from "Move Semantics"
- Adds some new and heavily revises old problems
- Makes texts in theory tasks shorter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "Common Programming Concepts/Repetitions/*/",
     "Common Programming Concepts/Tuples and Arrays/*/",
     "Understanding Ownership/Move Semantics/*/",
+    "Understanding Ownership/What is ownership/*/",
     "Data Types/Primitive Types/*/",
     "Data Types/Structs/*/",
     "Data Types/Enums and Pattern Matching/*/",
