Add tasks for ownership and functions

--- a/Understanding Ownership/What is ownership/lesson-info.yaml
+++ b/Understanding Ownership/What is ownership/lesson-info.yaml
@@ -12,4 +12,5 @@ content:
 - Return Values and Scope
 - More Exclamations
 - More Exclamations 2
+- More Exclamations with Mutable Argument
 - More Exclamations without Arguments
