Write "References and Borrowing" lesson (split theory tasks, new problems)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "Common Programming Concepts/Tuples and Arrays/*/",
     "Understanding Ownership/Move Semantics/*/",
     "Understanding Ownership/What is ownership/*/",
+    "Understanding Ownership/References and Borrowing/*/",
     "Data Types/Primitive Types/*/",
     "Data Types/Structs/*/",
     "Data Types/Enums and Pattern Matching/*/",
