Organize theory steps and borrow problems for the "The Slice Type" lesson

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,9 @@ members = [
     "Common Programming Concepts/Conditions/*/",
     "Common Programming Concepts/Repetitions/*/",
     "Common Programming Concepts/Tuples and Arrays/*/",
-    "Understanding Ownership/Move Semantics/*/",
     "Understanding Ownership/What is ownership/*/",
     "Understanding Ownership/References and Borrowing/*/",
-    "Data Types/Primitive Types/*/",
+    "Understanding Ownership/The Slice Type/*/",
     "Data Types/Structs/*/",
     "Data Types/Enums and Pattern Matching/*/",
     "Modules/Modules/*/",
