Add a couple of problems about slices

--- a/Understanding Ownership/The Slice Type/lesson-info.yaml
+++ b/Understanding Ownership/The Slice Type/lesson-info.yaml
@@ -3,7 +3,9 @@ content:
 - String Slices
 - String Literals Are Slices
 - String Slices as Parameters
+- Trim a String
 - Other Slices
 - Nice Slice
+- Summer Slice
 - Summary
 - Understanding Types
