Refactor the "Enums" lesson

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ members = [
     "Understanding Ownership/The Slice Type/*/",
     "Data Types/Structs/*/",
     "Data Types/Structs with Methods/*/",
-    "Data Types/Enums and Pattern Matching/*/",
+    "Data Types/Enums/*/",
+    "Data Types/Pattern Matching/*/",
     "Modules/Modules/*/",
     "Vectors, Hashmaps, and Strings/Vectors and Hashmaps/*/",
     "Vectors, Hashmaps, and Strings/Strings/*/",
