new intro for Modules

--- a/Modules/Modules/lesson-info.yaml
+++ b/Modules/Modules/lesson-info.yaml
@@ -1,5 +1,7 @@
 content:
 - Intro
+- Quick Reference
+- Defining Modules
 - Paths for Referring to an Item in the Module Tree
 - Bringing Paths into Scope with the use Keyword
 - Separating Modules into Different Files
