--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ members = [
     "Data Types/Structs/*/",
     "Data Types/Enums and Pattern Matching/*/",
     "Modules/Modules/*/",
-    "Vectors, Hashmaps, and Strings/Vectors and Hashmaps/*/",
-    "Vectors, Hashmaps, and Strings/Strings/*/",
-    "Vectors, Hashmaps, and Strings/String Test/*/",
+    "Common Collections/Vectors/*/",
+    "Common Collections/Hashmaps/*/",
+    "Common Collections/Strings/*/",
     "Error Handling/Error Handling/*/",
     "Generic Types, Traits, and Lifetime/Generic Types, Traits, and Lifetime/*/",
     "Writing Automated Tests/Tests/*/",
