--- a/Common Collections/Vectors/lesson-info.yaml
+++ b/Common Collections/Vectors/lesson-info.yaml
@@ -1,4 +1,11 @@
 content:
-- Vectors
-- Declaring a Vector
+- Intro
+- Creating a New Vector
+- Updating a Vector
+- Create a Vector on Your Own
+- Dropping a Vector Drops Its Elements
+- Reading Elements of Vectors
+- Reference vs push
+- Iterating over the Values in a Vector
 - Loop Over a Vector
+- Using an Enum to Store Multiple Types
