add one more task for vectors

--- a/Common Collections/Vectors/lesson-info.yaml
+++ b/Common Collections/Vectors/lesson-info.yaml
@@ -9,3 +9,4 @@ content:
 - Iterating over the Values in a Vector
 - Loop Over a Vector
 - Using an Enum to Store Multiple Types
+- Count Typed Cells
