--- a/Common Collections/Strings/Return a String/task-info.yaml
+++ b/Common Collections/Strings/Return a String/task-info.yaml
@@ -6,8 +6,8 @@ files:
   visible: true
   placeholders:
   - offset: 163
-    length: 12
-    placeholder_text: /*type the beginning of the trait here*/
+    length: 13
+    placeholder_text: /* something here*/
   - offset: 182
     length: 1
     placeholder_text: /*and the last part here*/
