--- a/Common Collections/Strings/lesson-info.yaml
+++ b/Common Collections/Strings/lesson-info.yaml
@@ -1,5 +1,11 @@
 content:
 - Intro
-- Returning a String
+- Creating a New String
+- Return a String
+- Updating a String
+- Indexing into Strings
+- Slicing Strings
+- Iterating Over Strings
 - String Slice
 - Strings and strs
+- Summary
