split section on generics to three lessons

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ members = [
     "Common Collections/Strings/*/",
     "Error Handling/Error Handling/*/",
     "Error Handling/Errors Primer/*/",
-    "Generic Types, Traits, and Lifetime/Generic Types, Traits, and Lifetime/*/",
+    "Generic Types, Traits, and Lifetime/Generic Data Types/*/",
+    "Generic Types, Traits, and Lifetime/Traits/*/",
+    "Generic Types, Traits, and Lifetime/Lifetimes/*/",
     "Writing Automated Tests/Tests/*/",
     "Writing Automated Tests/Tests Test/*/",
     "Standard Library Types/Iterators and Closures/*/",
