--- a/Generic Types, Traits, and Lifetime/Intro/Removing Duplication by Refactorings/task-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Intro/Removing Duplication by Refactorings/task-info.yaml
@@ -4,7 +4,7 @@ files:
   visible: true
   placeholders:
   - offset: 66
-    length: 142
+    length: 35
     placeholder_text: |-
       let mut largest = number_list[0];
 
@@ -13,11 +13,14 @@ files:
                   largest = number;
               }
           }
-  - offset: 336
-    length: 7
+  - offset: 144
+    length: 6
     placeholder_text: largest
-  - offset: 346
-    length: 124
+  - offset: 224
+    length: 6
+    placeholder_text: mut largest
+  - offset: 233
+    length: 22
     placeholder_text: |-
       number_list[0];
 
@@ -26,7 +29,13 @@ files:
                   largest = number;
               }
           }
+  - offset: 298
+    length: 6
+    placeholder_text: largest
+  - offset: 310
+    length: 181
+    placeholder_text: ""
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: images/ExtractFunction.png
   visible: false
