restructure lessons on Traits and Generics

--- a/Generic Types, Traits, and Lifetime/Generic Data Types/lesson-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Generic Data Types/lesson-info.yaml
@@ -1,5 +1,11 @@
 content:
-- Generic Data Types
+- Intro
+- In Function Definitions
+- In Struct Definitions
+- In Enum Definitions
+- In Method Definitions
+- Mixing Generic Types
+- Performance of Code Using Generics
 - Generics in Vec
 - Generics in Structs
 - Use Option
