--- a/Generic Types, Traits, and Lifetime/Traits/lesson-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Traits/lesson-info.yaml
@@ -1,5 +1,13 @@
 content:
 - Traits
+- Defining a Trait
+- Implementing a Trait on a Type
+- Default Implementations
+- Calling Methods Without Default Implementations
+- Traits as Parameters
+- Returning Types that Implement Traits
+- Fixing the largest Function with Trait Bounds
+- Using Trait Bounds to Conditionally Implement Methods
 - Trait Bound Syntax
 - String Trait
 - Vec Trait
