restructure lifetimes lesson

--- a/Generic Types, Traits, and Lifetime/Lifetimes/lesson-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Lifetimes/lesson-info.yaml
@@ -1,3 +1,16 @@
 content:
-- Lifetime Syntax
+- Intro
+- Preventing Dangling References with Lifetimes
+- The Borrow Checker
+- Generic Lifetimes in Functions
+- Lifetime Annotation Syntax
+- Lifetime Annotations in Function Signatures
+- Lifetime Going Out of Scope
+- Thinking in Terms of Lifetimes
+- Lifetime Annotations in Struct Definitions
+- Lifetime Elision
+- Lifetime Annotations in Method Definitions
+- The Static Lifetime
+- Generic Type Parameters, Trait Bounds, and Lifetimes Together
 - Pattern Binding
+- Summary
