hide Cargo.toml

--- a/Generic Types, Traits, and Lifetime/Generic Data Types/Generics in Structs/task-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Generic Data Types/Generics in Structs/task-info.yaml
@@ -19,7 +19,7 @@ files:
     length: 1
     placeholder_text: u32
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: tests/tests.rs
   visible: false
 - name: src/main.rs
