--- a/Writing Automated Tests/How to Write Tests/Checking Results with the assert Macro/task-info.yaml
+++ b/Writing Automated Tests/How to Write Tests/Checking Results with the assert Macro/task-info.yaml
@@ -1,6 +1,6 @@
 type: theory
 files:
-- name: src/main.rs
-  visible: true
 - name: Cargo.toml
+  visible: true
+- name: src/lib.rs
   visible: true
