--- a/Writing Automated Tests/How to Write Tests/Checking for Panics with should_panic/task-info.yaml
+++ b/Writing Automated Tests/How to Write Tests/Checking for Panics with should_panic/task-info.yaml
@@ -1,7 +1,7 @@
 type: theory
 custom_name: 'Checking for Panics with should_panic '
 files:
-- name: src/main.rs
+- name: src/lib.rs
   visible: true
 - name: Cargo.toml
   visible: true
