--- a/Writing Automated Tests/Tests/Assert_Eq/Cargo.toml
+++ b/Writing Automated Tests/Tests/Assert_Eq/Cargo.toml
@@ -1,4 +1,7 @@
 [package]
 name = "assert_eq"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
+
+[dependencies]
+escargot = {version = "0.5.7", features=["test_unstable"]}
