more tests section refactoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,7 @@ members = [
     "Generic Types, Traits, and Lifetime/Generic Data Types/*/",
     "Generic Types, Traits, and Lifetime/Traits/*/",
     "Generic Types, Traits, and Lifetime/Lifetimes/*/",
-    "Writing Automated Tests/Tests/*/",
-    "Writing Automated Tests/Tests Test/*/",
+    "Writing Automated Tests/Running and Organizing Tests/*/",
     "Writing Automated Tests/How to Write Tests/*/",
     "Standard Library Types/Iterators and Closures/*/",
     "Standard Library Types/Smart Pointers/*/",
