--- a/Writing Automated Tests/How to Write Tests/lesson-info.yaml
+++ b/Writing Automated Tests/How to Write Tests/lesson-info.yaml
@@ -6,3 +6,6 @@ content:
 - Adding Custom Failure Messages
 - Checking for Panics with should_panic
 - Using Result in Tests
+- Assert
+- Assert_Eq
+- Testing a Function
