fix some problems

--- a/Writing Automated Tests/How to Write Tests/Testing a Function/task-info.yaml
+++ b/Writing Automated Tests/How to Write Tests/Testing a Function/task-info.yaml
@@ -11,7 +11,7 @@ files:
     placeholder_text: /* TODO */
   - offset: 182
     length: 76
-    placeholder_text: /* Write a test function called `is_false_when_odd here and
+    placeholder_text: /* Write a test function called `is_false_when_odd` here and
       test for `is_even(5)` */
 - name: tests/tests.rs
   visible: false
