--- a/Writing Automated Tests/Running and Organizing Tests/Integration Tests/task-info.yaml
+++ b/Writing Automated Tests/Running and Organizing Tests/Integration Tests/task-info.yaml
@@ -3,8 +3,6 @@ files:
 - name: src/lib.rs
   visible: true
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: tests/integration_test.rs
-  visible: true
-- name: tests/common.rs
   visible: true
