--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,10 @@ members = [
     "Generic Types, Traits, and Lifetime/Lifetimes/*/",
     "Writing Automated Tests/Running and Organizing Tests/*/",
     "Writing Automated Tests/How to Write Tests/*/",
-    "Standard Library Types/Iterators and Closures/*/",
+    "Standard Library Types/Iterators/*/",
     "Standard Library Types/Smart Pointers/*/",
     "Standard Library Types/Type Conversions/*/",
+    "Standard Library Types/Closures/*/",
     "Concurrency/Threads/*/",
     "Concurrency/Shared-State Concurrency/*/",
     "Macros/Macros/*/",
