--- a/Standard Library Types/Closures/Capturing the Environment with Closures/task-info.yaml
+++ b/Standard Library Types/Closures/Capturing the Environment with Closures/task-info.yaml
@@ -2,5 +2,10 @@ type: theory
 files:
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 264
+    length: 22
+    placeholder_text: '|| self.most_stocked()'
 - name: Cargo.toml
   visible: true
+solution_hidden: true
