--- a/Standard Library Types/Smart Pointers/Box Task/task-info.yaml
+++ b/Standard Library Types/Smart Pointers/Box Task/task-info.yaml
@@ -1,4 +1,5 @@
 type: edu
+custom_name: 'Task: Use a Box'
 files:
 - name: src/lib.rs
   visible: true
@@ -9,6 +10,9 @@ files:
   - offset: 182
     length: 35
     placeholder_text: unimplemented!()
+  - offset: 58
+    length: 9
+    placeholder_text: List
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
