hide Cargo.toml files

--- a/Standard Library Types/Closures/Capturing the Environment with Closures/task-info.yaml
+++ b/Standard Library Types/Closures/Capturing the Environment with Closures/task-info.yaml
@@ -7,5 +7,5 @@ files:
     length: 22
     placeholder_text: '|| self.most_stocked()'
 - name: Cargo.toml
-  visible: true
+  visible: false
 solution_hidden: true
