--- a/Standard Library Types/Smart Pointers/Use Rc and RefCell/task-info.yaml
+++ b/Standard Library Types/Smart Pointers/Use Rc and RefCell/task-info.yaml
@@ -27,7 +27,7 @@ files:
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: tests/tests.rs
   visible: false
 - name: src/lamp.rs
