--- a/Fearless Concurrency/Using Threads to Run Code Simultaneously/lesson-info.yaml
+++ b/Fearless Concurrency/Using Threads to Run Code Simultaneously/lesson-info.yaml
@@ -2,3 +2,4 @@ content:
 - Creating a New Thread with spawn
 - Waiting for All Threads to Finish Using join Handles
 - Using move Closures with Threads
+- Join All Handles
