--- a/Fearless Concurrency/Using Message Passing to Transfer Data Between Threads/lesson-info.yaml
+++ b/Fearless Concurrency/Using Message Passing to Transfer Data Between Threads/lesson-info.yaml
@@ -6,3 +6,4 @@ content:
 - Channels and Ownership Transference
 - Sending Multiple Values and Seeing the Receiver Waiting
 - Creating Multiple Producers by Cloning the Transmitter
+- Sum All Numbers
