hide Cargo.toml

--- a/Fearless Concurrency/Using Message Passing to Transfer Data Between Threads/Sum All Numbers/task-info.yaml
+++ b/Fearless Concurrency/Using Message Passing to Transfer Data Between Threads/Sum All Numbers/task-info.yaml
@@ -18,6 +18,6 @@ files:
     placeholder_text: /* What should you iterate over to receive all the numbers?
       */
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: tests/tests.rs
   visible: false
