--- a/Fearless Concurrency/Using Threads to Run Code Simultaneously/Join All Handles/task-info.yaml
+++ b/Fearless Concurrency/Using Threads to Run Code Simultaneously/Join All Handles/task-info.yaml
@@ -14,6 +14,6 @@ files:
     length: 23
     placeholder_text: '/* TODO: Join the handle here */'
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: tests/tests.rs
   visible: false
