--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,8 @@ members = [
     "Fearless Concurrency/Using Threads to Run Code Simultaneously/*/",
     "Fearless Concurrency/Using Message Passing to Transfer Data Between Threads/*/",
     "Fearless Concurrency/Shared-State Concurrency/*/",
-    "Macros/Macros/*/",
-    "Macros/Macros Test/*/",
+    "Macros/Declarative Macros/*/",
+    "Macros/Procedural Macros/*/",
     "Fearless Concurrency/Using Threads to Run Code Simultaneously/*/",
 ]
 
