--- a/Introduction/Getting started/External Linter/task-info.yaml
+++ b/Introduction/Getting started/External Linter/task-info.yaml
@@ -1,7 +1,9 @@
 type: ide
-custom_name: "Task: Enable External Linter"
+custom_name: 'Task: Enable External Linter'
 files:
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
-  visible: true
+  visible: false
+- name: images/external-linters.png
+  visible: false
