use "Task:" prefix in custom_names for checkable tasks

--- a/Common Programming Concepts/Basic Data Types/Boolean Test/task-info.yaml
+++ b/Common Programming Concepts/Basic Data Types/Boolean Test/task-info.yaml
@@ -1,11 +1,12 @@
 type: edu
+custom_name: 'Task: Morning or Evening?'
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
   placeholders:
-  - offset: 135
+  - offset: 109
     length: 19
     placeholder_text: // Finish the rest of this line like the example! Or make it
       be false!
