add lifetimes1 from rustlings

--- a/Generic Types, Traits, and Lifetime/Lifetimes/lesson-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Lifetimes/lesson-info.yaml
@@ -13,4 +13,5 @@ content:
 - The Static Lifetime
 - Generic Type Parameters, Trait Bounds, and Lifetimes Together
 - Pattern Binding
+- Specify Lifetimes
 - Summary
