--- a/Generic Types, Traits, and Lifetime/Lifetimes/lesson-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Lifetimes/lesson-info.yaml
@@ -14,4 +14,5 @@ content:
 - Generic Type Parameters, Trait Bounds, and Lifetimes Together
 - Pattern Binding
 - Specify Lifetimes
+- Unify Lifetimes
 - Summary
