add missing part of vecs2 from rustlings

--- a/Standard Library Types/Iterators/lesson-info.yaml
+++ b/Standard Library Types/Iterators/lesson-info.yaml
@@ -5,6 +5,7 @@ content:
 - Methods that Produce Other Iterators
 - Using Closures that Capture Their Environment
 - Iterable Collection
+- Loop Over Vector With Iterators
 - Capitalize first
 - Iterator
 - Factorial
