move all options tasks to the separate lesson under "Common Collections"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "Common Collections/Vectors/*/",
     "Common Collections/Hashmaps/*/",
     "Common Collections/Strings/*/",
+    "Common Collections/Options/*/",
     "Error Handling/Error Handling/*/",
     "Error Handling/Errors Primer/*/",
     "Generic Types, Traits, and Lifetime/Intro/*/",
