--- a/Common Collections/Options/Use Option/task-info.yaml
+++ b/Common Collections/Options/Use Option/task-info.yaml
@@ -1,21 +1,16 @@
 type: edu
-custom_name: "Task: Use Option"
+custom_name: "Task: Want Some Ice Cream?"
 files:
-- name: src/main.rs
+- name: src/lib.rs
   visible: true
   placeholders:
-  - offset: 130
-    length: 8
-    placeholder_text: 13
-  - offset: 158
-    length: 8
-    placeholder_text: 99
-  - offset: 207
-    length: 15
-    placeholder_text: /* Something goes here */
-  - offset: 370
+  - offset: 231
+    length: 118
+    placeholder_text: "// TODO: Return an Option!"
+  - offset: 435
     length: 19
-    placeholder_text: number_to_add
+    placeholder_text: "/* TODO: Fix this test. How do you get at the value contained\
+      \ in the Option? */"
 - name: Cargo.toml
   visible: false
 - name: tests/tests.rs
