Added a correct proposed solution to Mastering the IDE: Exact Method Refactoring closes: https://github.com/jetbrains-academy/rustlings-course/issues/185

--- a/Common Programming Concepts/Functions/Extract Method Refactoring/task-info.yaml
+++ b/Common Programming Concepts/Functions/Extract Method Refactoring/task-info.yaml
@@ -4,12 +4,16 @@ files:
 - name: src/main.rs
   visible: true
   placeholders:
-  - offset: 41
-    length: 61
-    placeholder_text: 'println!("{}: 10 years ago was {}", year1993, year1993 - 10);'
-  - offset: 133
-    length: 61
-    placeholder_text: 'println!("{}: 10 years ago was {}", year2021, year2021 - 10);'
+  - offset: 0
+    length: 243
+    placeholder_text: |-
+      fn main() {
+          let year1993 = 1993;
+          println!("{}: 10 years ago was {}", year1993, year1993 - 10);
+
+          let year2021 = 2021;
+          println!("{}: 10 years ago was {}", year2021, year2021 - 10);
+      }
 - name: Cargo.toml
   visible: false
 - name: refactoring.png
