--- a/Generic Types, Traits, and Lifetime/Traits/Compare Licenses/task-info.yaml
+++ b/Generic Types, Traits, and Lifetime/Traits/Compare Licenses/task-info.yaml
@@ -1,19 +1,9 @@
 type: edu
-custom_name: 'Task: Compare Licenses'
+custom_name: "Task: Compare Licenses"
 files:
 - name: src/lib.rs
   visible: true
   placeholders:
-  - offset: 59
-    length: 47
-    placeholder_text: ";"
-    dependency:
-      section: Generic Types, Traits, and Lifetime
-      lesson: Traits
-      task: License It
-      file: src/lib.rs
-      placeholder: 1
-      is_visible: false
   - offset: 313
     length: 13
     placeholder_text: ??
