feat(Course Name): Renamed to Learn Rust
Updated to v16, course renamed to Learn Rust

--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,5 +1,5 @@
 type: marketplace
-title: Rustlings
+title: Learn Rust
 language: English
 summary: "<p>This course contains small exercises aimed to familiarize you with reading\
   \ and writing Rust code. It is an adaptation of the exciting <a href=\"https://github.com/rust-lang/rustlings\"\
