Edited text and error messages to avoid confusion Closes https://github.com/jetbrains-academy/rustlings-course/issues/210

--- a/Understanding Ownership/What is ownership/More Exclamations without Arguments/task-info.yaml
+++ b/Understanding Ownership/What is ownership/More Exclamations without Arguments/task-info.yaml
@@ -12,7 +12,7 @@ files:
     placeholder_text: hello
   - offset: 234
     length: 0
-    placeholder_text: 's: String'
+    placeholder_text: "s: String"
   - offset: 252
     length: 36
     placeholder_text: /* Create the "Hello" string here */
