--- a/Common Programming Concepts/Conditions/Add Conditions/task-info.yaml
+++ b/Common Programming Concepts/Conditions/Add Conditions/task-info.yaml
@@ -14,7 +14,7 @@ files:
     length: 26
     placeholder_text: /* Something goes here */
 - name: src/main.rs
-  visible: false
+  visible: true
 - name: Cargo.toml
   visible: false
 - name: tests/tests.rs
